--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+  </head>
+    <body>
+
+    </body>
+  
+</html>
 <h1>This is my homepage</h1>
 <h2>My link-in-bio</h2>
