Up to point where added picture

--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Links in Bio Page</title>
     <meta charset="UTF-8">
+    <style>
+      * {
+        border: 1px red solid;
+      }
+    </style>
   </head>
     <body>
+      <div class="main-container">
+        <div class="image-row">
+          <img src="/workspaces/link-in-bio/Photos/ElliePic.jpg" alt="Picture of Golden Retriever">
+        </div>
 
+        <div class="name-row">
+          Matt Dadabo
+        </div>
+
+        <div class="social-icons-row">
+          socials
+        </div>
+
+        <div class="links-row">
+          <div class="item">
+            First link
+          </div>
+    
+          <div class="item">
+            Second link
+          </div>
+    
+          <div class="item">
+            Third link
+          </div>
+        </div> <!-- links-row -->
+      </div> <!-- main-container -->
     </body>
-  
 </html>
-<h1>This is my homepage</h1>
-<h2>My link-in-bio</h2>
