--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Links in Bio Page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/js/all.min.js"></script>
     <style>
+      /*
       * {
         border: 1px red solid;
       }
-
+      */
       html {
         min-height:100%;
       }
@@ -19,10 +21,12 @@
         padding-bottom: 40px;
         background: radial-gradient(circle at 50% 50%, #2e275c, #2b3868, #2e5674, #317980, #348c75, #36995c, #39a63c, #61b33b);
         color: rgba(255, 255, 255, 1.0);
+        font-family: "Impact";
       }
 
       a {
         color: color: rgba(255, 255, 255, 1.0);
+        text-decoration: none;
       }
 
       .avatar-image {
@@ -44,6 +48,9 @@
         margin-bottom: 20px;
         display: flex;
         align-items: center;
+        border-radius: 1000px;
+        padding: 5px;
+        box-shadow: 4px 4px 10px 0px rgba(122,32,122,0.5);
       }
 
       .main-container {
@@ -59,6 +66,9 @@
       .name-row {
         margin-bottom: 30px;
         text-align: center;
+        font-family: "Georgia";
+        font-size: 24px;
+        font-weight: 900;
       }
 
       .social-icons-row {
@@ -84,9 +94,9 @@
         </div>
 
         <div class="social-icons-row">
-          <a href="https://www.linkedin.com/in/matt-dadabo-416b9027/">LinkedIn</a>
-          <a href="https://www.instagram.com/mattdadabo/">Instagram</a>
-          <a href="https://www.goodreads.com/user/show/137838480-matthew-philip">GoodReads</a>
+          <a href="https://www.linkedin.com/in/matt-dadabo-416b9027/"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.instagram.com/mattdadabo/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.goodreads.com/user/show/137838480-matthew-philip"><i class="fa-brands fa-goodreads"></i></a>
         </div>
 
         <div class="links-row">
